--- a/WebShare/src/main/webapp/WEB-INF/web.xml
+++ b/WebShare/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,14 @@
     </filter-mapping>
     <servlet-mapping>
         <servlet-name>index</servlet-name>
-        <url-pattern>/index</url-pattern>
+        <url-pattern>/home</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>addUser</servlet-name>
+        <servlet-class>com.mti.webshare.service.addUser</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>addUser</servlet-name>
+        <url-pattern>/Inscription</url-pattern>
     </servlet-mapping>
 </web-app>
