--- a/WebShare/src/main/webapp/WEB-INF/web.xml
+++ b/WebShare/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <display-name>Spring Web MVC Application</display-name>
+    
+    <!-- Start Mika Modifs -->
+    
+    <servlet>
+        <servlet-name>webshare</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>webshare</servlet-name>
+        <url-pattern>*.htm</url-pattern>
+    </servlet-mapping>
+
+    <welcome-file-list>
+        <welcome-file>
+        index.jsp
+        </welcome-file>
+    </welcome-file-list>
+    
+    <!-- End Mika Modifs
+    
     <servlet>
         <servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -16,7 +38,7 @@
     </servlet-mapping>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/mvc-dispatcher-servlet.xml</param-value>
+        <param-value>/WEB-INF/webshare-servlet.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -40,5 +62,5 @@
     <servlet-mapping>
         <servlet-name>addUser</servlet-name>
         <url-pattern>/Inscription</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
 </web-app>
