--- a/WebShare/pom.xml
+++ b/WebShare/pom.xml
@@ -18,6 +18,13 @@
                 <version>4.10</version>
                 <scope>test</scope>
             </dependency>
+            
+            <dependency>
+                <groupId>commons-dbcp</groupId>
+                <artifactId>commons-dbcp</artifactId>
+                <version>1.2.1</version>
+            </dependency>
+
             <dependency>
                     <groupId>org.springframework</groupId>
                     <artifactId>spring-core</artifactId>
