--- a/WebShare/src/main/webapp/WEB-INF/web.xml
+++ b/WebShare/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,17 @@
     
     <!-- Start Mika Modifs -->
     
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            /WEB-INF/webshare-servlet.xml
+        </param-value>
+    </context-param>
+    
     <servlet>
         <servlet-name>webshare</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
