--- a/WebShare/pom.xml
+++ b/WebShare/pom.xml
@@ -22,7 +22,7 @@
             <dependency>
                 <groupId>commons-dbcp</groupId>
                 <artifactId>commons-dbcp</artifactId>
-                <version>1.2.1</version>
+                <version>1.4</version>
             </dependency>
 
             <dependency>
@@ -81,7 +81,12 @@
             <dependency>
                     <groupId>mysql</groupId>
                     <artifactId>mysql-connector-java</artifactId>
-                    <version>5.1.6</version>
+                    <version>5.1.16</version>
+            </dependency>
+            <dependency>
+                    <groupId>javax.sql</groupId>
+                    <artifactId>jdbc-stdext</artifactId>
+                    <version>2.0</version>
             </dependency>
             <dependency>
                     <groupId>org.hibernate</groupId>
