--- a/WebShare/src/main/webapp/WEB-INF/web.xml
+++ b/WebShare/src/main/webapp/WEB-INF/web.xml
@@ -2,18 +2,14 @@
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <display-name>Spring Web MVC Application</display-name>
     
-    <!-- Start Mika Modifs -->
-    
+    <!-- Spring -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/applicationContext.xml</param-value>
+    </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>
-            /WEB-INF/webshare-servlet.xml
-        </param-value>
-    </context-param>
     
     <servlet>
         <servlet-name>webshare</servlet-name>
@@ -31,53 +27,5 @@
         index.jsp
         </welcome-file>
     </welcome-file-list>
-    
-    <!-- End Mika Modifs
-    
-    <servlet>
-        <servlet-name>mvc-dispatcher</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet>
-        <servlet-name>index</servlet-name>
-        <servlet-class>com.mti.webshare.service.index</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>inscription</servlet-name>
-        <servlet-class>com.mti.webshare.service.Inscription</servlet-class>
-    </servlet>
-    
-    <servlet-mapping>
-        <servlet-name>mvc-dispatcher</servlet-name>
-        <url-pattern>*.htm</url-pattern>
-    </servlet-mapping>
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/webshare-servlet.xml</param-value>
-    </context-param>
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    <filter>
-        <filter-name>JpaFilter</filter-name>
-        <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>JpaFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <servlet-mapping>
-        <servlet-name>index</servlet-name>
-        <url-pattern>/home</url-pattern>
-    </servlet-mapping>
-    <servlet>
-        <servlet-name>addUser</servlet-name>
-        <servlet-class>com.mti.webshare.service.addUser</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>addUser</servlet-name>
-        <url-pattern>/Inscription</url-pattern>
-    </servlet-mapping>-->
 
 </web-app>
