--- a/WebShare/pom.xml
+++ b/WebShare/pom.xml
@@ -124,6 +124,18 @@
                     <version>2.5</version>
                     <scope>provided</scope>
             </dependency>
+            
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>1.2</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>1.4</version>
+            </dependency>
 
     </dependencies>
 
