--- a/WebShare/src/main/webapp/WEB-INF/web.xml
+++ b/WebShare/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
     
     <context-param>
         <param-name>serverLocation</param-name>
-        <param-value>/home/vince/Documents/Projets/Projet-J2EE/WebShare/uploadedFiles/</param-value>
+        <param-value>/Users/damiensoulard/Documents/MTI/J2EE/Projet-J2EE/WebShare/uploadedFiles/</param-value>
     </context-param>
     
     <servlet>
@@ -25,6 +25,17 @@
     <servlet-mapping>
         <servlet-name>webshare</servlet-name>
         <url-pattern>*.htm</url-pattern>
+    </servlet-mapping>
+    
+    <!-- WebService -->
+    <servlet>
+        <servlet-name>CXFServlet</servlet-name>
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/ws/*</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
