--- a/WebShare/pom.xml
+++ b/WebShare/pom.xml
@@ -110,6 +110,12 @@
                     <artifactId>jstl</artifactId>
                     <version>1.1.2</version>
             </dependency>
+            
+            <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>jsr311-api</artifactId>
+                <version>1.0</version>
+            </dependency>
 
             <dependency>
                     <groupId>taglibs</groupId>
@@ -142,6 +148,11 @@
             <dependency>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                <version>2.2.10</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-frontend-jaxrs</artifactId>
                 <version>2.2.10</version>
             </dependency>
             <dependency>
