--- a/WebShare/pom.xml
+++ b/WebShare/pom.xml
@@ -160,6 +160,12 @@
                 <artifactId>cxf-rt-transports-http</artifactId>
                 <version>2.2.10</version>
             </dependency>
+            
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>1.7.1</version>
+            </dependency>
     </dependencies>
 
 	<build>
